tests/NormalTests/paczka1/small_fuzzy/12834215.err
Error in line 3: LWqZJe1jB S201 56,5
Error in line 7: LWqZJe1jB A778 76,0
Error in line 8: LWqZJe1jB S201 14,0
Error in line 9: LWqZJe1jB S601 48,8
